# CHM5

./: CGM.cpp  CGM.h  CMakeLists.txt  Jacobi.cpp  Jacobi.h  Lab V.cpp  Matrix algebra.cpp  Matrix algebra.h  SOR.cpp  SOR.h  Task I.cpp  Task I.h  lab5.cpp  lab5listing.txt
