# CMakeList.txt: проект CMake для lab5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("lab5")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab5 "lab5.cpp" "lab5.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
